# mushroom-game

./: Cargo.toml  ambient.toml
assets/: boletus_edulis.fbx
src/: client.rs  server.rs
