[package]
name = "mushroom_game"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = "0.3.1"
log = "0.4.20"

[[bin]]
name = "mushroom_game_client"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "mushroom_game_server"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
